CHANGES for LIRE
================

2013-01-24
==========
  - Bug fix in handling the result list based on the comment from Nikolay Neshov.

2013-01-07
==========
  - Added a verbose exception to LocalFeatureHistogramBuilder.

2013-01-07
==========
  - Fixed a non-critical bug in CEDD.java & FCTH.java
  - 10% speed up in search with CEDD

2012-12-20
==========
  - Release 0.9.3

2012-12-20
==========
  - Added OpponentHistogram to ImageSearcherFactory and DocumentBuilderFactory.
  - Updated LireDemo to include Joint Histogram and Opponent Histogram.
  - Added JointOpponentHistogram, fooled around with fuzzy opponent histogram ... didn't work out well.

2012-12-12
==========
  - changed Histogram abstract class member to double[] ... it's much faster
    on 64 bit systems running Java 1.7.
  - Changed  BufferedImage convertImageToGrey(...) to faster version.
  - Change JointHistogram.java to use this method.
  - Cleaned up SimpleColorHistogram a bit.
  - Cleaned up AutoColorCorrelogram a bit.
  - Added OpponentHistogram with JSD as a distance function.
  - Checked for a way to re-implement Metric Spaces approach with Lucene:
    Currently there is no way as the TermPositions object has gone missing.
    Other ideas would be to integrate a new similarity based on footrule
    distance. Or: put it in a simple byte[] based text file ?!?

2012-12-12
==========
  - Made CEDD faster. Packed two bins in one byte and extracted temp variables.
  - Performance updates on GenericFastImageSearcher.
  - Performance updates on GenericDocumentBuilder.
  - Found out that on the 64 bit VM double operations are faster than float ops.

2012-12-12
==========
  - Added joint histogram class and added it to Searcher and Builder factories.
  - Fixed nasty bug in JSD implementation (operator priority in Java!)
  - Made JSD the default distance function in RGB color histogram.

2012-12-10
==========
  - Test for LSH done and reported working.