@@ -1,5 +1,5 @@
 #Properties of this specific CALIPH build
-#Fri, 21 Dec 2012 13:56:51 +0100
+#Thu, 24 Jan 2013 15:16:45 +0100
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2012/12/21 13\:56
-build-number=153
+build-date=2013/01/24 15\:16
+build-number=154
